# robotics

./: .gitignore  README.md
bicycle_robot/: CHECKLIST.md  Dockerfile  build_and_test.sh  run_demo.sh
bicycle_robot/install/: setup.sh
bicycle_robot/install/bicycle_control/include/bicycle_control/: bezier_planner.hpp  bicycle_model.hpp
bicycle_robot/install/bicycle_control/lib/bicycle_control/: path_follower_node
bicycle_robot/install/bicycle_control/share/ament_index/resource_index/package_run_dependencies/: bicycle_control
bicycle_robot/install/bicycle_control/share/bicycle_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
bicycle_robot/install/bicycle_control/share/bicycle_control/cmake/: bicycle_controlConfig.cmake
bicycle_robot/install/bicycle_control/share/bicycle_control/launch/: visualize.launch.py
bicycle_robot/install/bicycle_control_interfaces/include/bicycle_control_interfaces/bicycle_control_interfaces/action/: follow_path.h  follow_path.hpp
bicycle_robot/install/bicycle_control_interfaces/include/bicycle_control_interfaces/bicycle_control_interfaces/action/detail/: follow_path__functions.c  follow_path__functions.h  follow_path__rosidl_typesupport_introspection_c.h  follow_path__struct.hpp  follow_path__type_support.c  follow_path__type_support.h  follow_path__type_support.hpp
bicycle_robot/install/bicycle_control_interfaces/include/bicycle_control_interfaces/bicycle_control_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
bicycle_robot/install/bicycle_control_interfaces/share/ament_index/resource_index/package_run_dependencies/: bicycle_control_interfaces
bicycle_robot/install/bicycle_control_interfaces/share/bicycle_control_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
bicycle_robot/install/bicycle_control_interfaces/share/bicycle_control_interfaces/action/: FollowPath.idl
bicycle_robot/install/bicycle_control_interfaces/share/bicycle_control_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  bicycle_control_interfaces__rosidl_typesupport_cExport-noconfig.cmake  bicycle_control_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  bicycle_control_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_bicycle_control_interfaces__rosidl_generator_cExport.cmake  export_bicycle_control_interfaces__rosidl_generator_cppExport.cmake  export_bicycle_control_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake
bicycle_robot/log/: latest_build  latest_test  latest_test-result
bicycle_robot/src/bicycle_control/: CMakeLists.txt
bicycle_robot/src/bicycle_control/include/bicycle_control/: pure_pursuit.hpp  stanley.hpp
bicycle_robot/src/bicycle_control/rviz/: config.rviz
bicycle_robot/src/bicycle_control/src/: bezier_planner.cpp  bicycle_model.cpp  path_follower_node.cpp  pure_pursuit.cpp  stanley.cpp
bicycle_robot/src/bicycle_control/test/: test_bicycle_model.cpp
bicycle_robot/src/bicycle_control_interfaces/: CMakeLists.txt
bicycle_robot/src/bicycle_control_interfaces/action/: FollowPath.action
